--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    parameters {
+        choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Terraform action to perform')
+    }
+
     environment {
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
@@ -9,7 +13,6 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                // Clone your Terraform config repo
                 git branch: 'main', credentialsId: 'Github', url: 'https://github.com/rdhanda15/terraformec2.git'
             }
         }
@@ -22,23 +25,29 @@ pipeline {
 
         stage('Terraform Plan') {
             steps {
-                sh 'terraform plan -out=tfplan'
+                script {
+                    if (params.ACTION == 'destroy') {
+                        sh 'terraform plan -destroy -out=tfplan'
+                    } else {
+                        sh 'terraform plan -out=tfplan'
+                    }
+                }
             }
         }
 
         stage('Terraform Apply') {
             steps {
-                sh 'terraform apply -auto-approve tfplan'
+                sh "terraform ${params.ACTION} -auto-approve tfplan"
             }
         }
     }
 
     post {
         success {
-            echo '✅ EC2 Instance created successfully!'
+            echo "✅ Terraform ${params.ACTION} completed successfully!"
         }
         failure {
-            echo '❌ Terraform apply failed.'
+            echo "❌ Terraform ${params.ACTION} failed."
         }
     }
 }
