--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,11 +1,5 @@
 pipeline {
-    agent any
-
-    parameters {
-        choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Terraform action to perform')
-    }
-
-    environment {
+    agent any {
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
     }
