--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,5 +1,5 @@
 pipeline {
-    agent any {
+    agent learn {
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
     }
