--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,5 +1,11 @@
 pipeline {
-    agent learn {
+    agent { label 'learn' }
+
+    parameters {
+        choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Terraform action to perform')
+    }
+
+    environment {
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
     }
@@ -31,8 +37,8 @@ pipeline {
 
         stage('Terraform Apply') {
             steps {
-                echo "Terrafrom ACTION is --> ${ACTION}"
-                sh "terraform ${ACTION} -auto-approve"
+                echo "Terraform ACTION is --> ${params.ACTION}"
+                sh "terraform ${params.ACTION} -auto-approve tfplan"
             }
         }
     }
